--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 #here are my fake env variables
 MONGODB_URI=mongodb://localhost:27017/myapp
-JWT_ACCESS_SECRET=secret
-JWT_REFRESH_SECRET=secret
+ACCESS_TOKEN_SECRET=secret
+REFRESH_TOKEN_SECRET=secret
+NODE_ENV=development
