--- a/package.json
+++ b/package.json
@@ -13,10 +13,15 @@
     "@elysiajs/openapi": "^1.4.14",
     "@hookform/resolvers": "^5.2.2",
     "@sinclair/typebox": "^0.34.48",
+    "@types/bunyan": "^1.8.11",
+    "@types/js-cookie": "^3.0.6",
     "bcryptjs": "^3.0.3",
+    "bunyan": "^1.8.15",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "elysia": "^1.4.22",
+    "jose": "^6.1.3",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.563.0",
     "mongoose": "^9.1.5",
     "next": "16.1.6",
