--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@elysiajs/jwt": "^1.4.0",
-    "@elysiajs/openapi": "^1.4.14",
+    "@elysiajs/swagger": "^1.3.1",
     "@hookform/resolvers": "^5.2.2",
     "@sinclair/typebox": "^0.34.48",
     "@types/bunyan": "^1.8.11",
